CI1/src/minip/minipGrammarParser.java
// Generated from C:\Users\ClausTorben\OneDrive\Dokumente\Studium\Praktikum\CI\CI1\src\minip\minipGrammar.g4 by ANTLR 4.4
package minip;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class minipGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMSYMBOL=1, BEGINSYMBOL=2, ENDSYMBOL=3, IFSYMBOL=4, THENSYMBOL=5, 
		ELSESYMBOL=6, FISYMBOL=7, WHILESYMBOL=8, DOSYMBOL=9, ODSYMBOL=10, PRINTLNSYMBOL=11, 
		READSYMBOL=12, ZUWEISUNGSSYMBOL=13, VERGLEICHSSYMBOL=14, KLAMMERAUFSYMBOL=15, 
		KLAMMERZUSYMBOL=16, CONSTANTSYMBOL=17, PLUSMINUSSYMBOL=18, MALGETEILTSYMBOL=19, 
		LISTCUTSYMBOL=20, CMDENDSYMBOL=21, REALCUTSYMBOL=22, UNSIGNEDINTEGERCONST=23, 
		BOOLEANCONST=24, STRINGCONST=25, ID=26, COMMENT=27, WS=28;
	public static final String[] tokenNames = {
		"<INVALID>", "'program'", "'begin'", "'end'", "'if'", "'then'", "'else'", 
		"'fi'", "'while'", "'do'", "'od'", "'print'", "'read'", "':='", "VERGLEICHSSYMBOL", 
		"'('", "')'", "CONSTANTSYMBOL", "PLUSMINUSSYMBOL", "MALGETEILTSYMBOL", 
		"','", "';'", "'.'", "UNSIGNEDINTEGERCONST", "BOOLEANCONST", "STRINGCONST", 
		"ID", "COMMENT", "WS"
	};
	public static final int
		RULE_start = 0, RULE_declaration = 1, RULE_programmcode = 2, RULE_anweisung = 3, 
		RULE_zuweisung = 4, RULE_zuweisungvalue = 5, RULE_condition = 6, RULE_vergleich = 7, 
		RULE_schleife = 8, RULE_number = 9, RULE_integer = 10, RULE_real = 11, 
		RULE_println = 12, RULE_read = 13, RULE_arithausdr = 14, RULE_a = 15, 
		RULE_addition = 16, RULE_e = 17, RULE_multiplikation = 18, RULE_p = 19, 
		RULE_arithidentifiere = 20;
	public static final String[] ruleNames = {
		"start", "declaration", "programmcode", "anweisung", "zuweisung", "zuweisungvalue", 
		"condition", "vergleich", "schleife", "number", "integer", "real", "println", 
		"read", "arithausdr", "a", "addition", "e", "multiplikation", "p", "arithidentifiere"
	};

	@Override
	public String getGrammarFileName() { return "minipGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public minipGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode PROGRAMSYMBOL() { return getToken(minipGrammarParser.PROGRAMSYMBOL, 0); }
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode ENDSYMBOL() { return getToken(minipGrammarParser.ENDSYMBOL, 0); }
		public TerminalNode BEGINSYMBOL() { return getToken(minipGrammarParser.BEGINSYMBOL, 0); }
		public ProgrammcodeContext programmcode() {
			return getRuleContext(ProgrammcodeContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(PROGRAMSYMBOL);
			setState(43); declaration();
			setState(44); match(BEGINSYMBOL);
			setState(45); programmcode();
			setState(46); match(ENDSYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode CMDENDSYMBOL(int i) {
			return getToken(minipGrammarParser.CMDENDSYMBOL, i);
		}
		public List<TerminalNode> ID() { return getTokens(minipGrammarParser.ID); }
		public List<TerminalNode> CONSTANTSYMBOL() { return getTokens(minipGrammarParser.CONSTANTSYMBOL); }
		public List<TerminalNode> LISTCUTSYMBOL() { return getTokens(minipGrammarParser.LISTCUTSYMBOL); }
		public TerminalNode CONSTANTSYMBOL(int i) {
			return getToken(minipGrammarParser.CONSTANTSYMBOL, i);
		}
		public List<TerminalNode> CMDENDSYMBOL() { return getTokens(minipGrammarParser.CMDENDSYMBOL); }
		public TerminalNode ID(int i) {
			return getToken(minipGrammarParser.ID, i);
		}
		public TerminalNode LISTCUTSYMBOL(int i) {
			return getToken(minipGrammarParser.LISTCUTSYMBOL, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONSTANTSYMBOL) {
				{
				{
				setState(48); match(CONSTANTSYMBOL);
				setState(49); match(ID);
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LISTCUTSYMBOL) {
					{
					{
					setState(50); match(LISTCUTSYMBOL);
					setState(51); match(ID);
					}
					}
					setState(56);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(57); match(CMDENDSYMBOL);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgrammcodeContext extends ParserRuleContext {
		public List<AnweisungContext> anweisung() {
			return getRuleContexts(AnweisungContext.class);
		}
		public AnweisungContext anweisung(int i) {
			return getRuleContext(AnweisungContext.class,i);
		}
		public ProgrammcodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programmcode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterProgrammcode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitProgrammcode(this);
		}
	}

	public final ProgrammcodeContext programmcode() throws RecognitionException {
		ProgrammcodeContext _localctx = new ProgrammcodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programmcode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IFSYMBOL) | (1L << WHILESYMBOL) | (1L << PRINTLNSYMBOL) | (1L << READSYMBOL) | (1L << ID))) != 0)) {
				{
				{
				setState(63); anweisung();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnweisungContext extends ParserRuleContext {
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public ZuweisungContext zuweisung() {
			return getRuleContext(ZuweisungContext.class,0);
		}
		public SchleifeContext schleife() {
			return getRuleContext(SchleifeContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public AnweisungContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anweisung; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterAnweisung(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitAnweisung(this);
		}
	}

	public final AnweisungContext anweisung() throws RecognitionException {
		AnweisungContext _localctx = new AnweisungContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_anweisung);
		try {
			setState(74);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(69); zuweisung();
				}
				break;
			case IFSYMBOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(70); condition();
				}
				break;
			case WHILESYMBOL:
				enterOuterAlt(_localctx, 3);
				{
				setState(71); schleife();
				}
				break;
			case PRINTLNSYMBOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(72); println();
				}
				break;
			case READSYMBOL:
				enterOuterAlt(_localctx, 5);
				{
				setState(73); read();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ZuweisungContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minipGrammarParser.ID, 0); }
		public TerminalNode CMDENDSYMBOL() { return getToken(minipGrammarParser.CMDENDSYMBOL, 0); }
		public ZuweisungvalueContext zuweisungvalue() {
			return getRuleContext(ZuweisungvalueContext.class,0);
		}
		public TerminalNode ZUWEISUNGSSYMBOL() { return getToken(minipGrammarParser.ZUWEISUNGSSYMBOL, 0); }
		public ZuweisungContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zuweisung; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterZuweisung(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitZuweisung(this);
		}
	}

	public final ZuweisungContext zuweisung() throws RecognitionException {
		ZuweisungContext _localctx = new ZuweisungContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_zuweisung);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(ID);
			setState(77); match(ZUWEISUNGSSYMBOL);
			setState(78); zuweisungvalue();
			setState(79); match(CMDENDSYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ZuweisungvalueContext extends ParserRuleContext {
		public TerminalNode BOOLEANCONST() { return getToken(minipGrammarParser.BOOLEANCONST, 0); }
		public TerminalNode STRINGCONST() { return getToken(minipGrammarParser.STRINGCONST, 0); }
		public ArithausdrContext arithausdr() {
			return getRuleContext(ArithausdrContext.class,0);
		}
		public VergleichContext vergleich() {
			return getRuleContext(VergleichContext.class,0);
		}
		public ZuweisungvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zuweisungvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterZuweisungvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitZuweisungvalue(this);
		}
	}

	public final ZuweisungvalueContext zuweisungvalue() throws RecognitionException {
		ZuweisungvalueContext _localctx = new ZuweisungvalueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_zuweisungvalue);
		try {
			setState(85);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); match(STRINGCONST);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82); match(BOOLEANCONST);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83); vergleich();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84); arithausdr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ProgrammcodeContext programmcode(int i) {
			return getRuleContext(ProgrammcodeContext.class,i);
		}
		public TerminalNode FISYMBOL() { return getToken(minipGrammarParser.FISYMBOL, 0); }
		public TerminalNode ELSESYMBOL() { return getToken(minipGrammarParser.ELSESYMBOL, 0); }
		public TerminalNode IFSYMBOL() { return getToken(minipGrammarParser.IFSYMBOL, 0); }
		public VergleichContext vergleich() {
			return getRuleContext(VergleichContext.class,0);
		}
		public TerminalNode THENSYMBOL() { return getToken(minipGrammarParser.THENSYMBOL, 0); }
		public List<ProgrammcodeContext> programmcode() {
			return getRuleContexts(ProgrammcodeContext.class);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(IFSYMBOL);
			setState(88); vergleich();
			setState(89); match(THENSYMBOL);
			setState(90); programmcode();
			setState(93);
			_la = _input.LA(1);
			if (_la==ELSESYMBOL) {
				{
				setState(91); match(ELSESYMBOL);
				setState(92); programmcode();
				}
			}

			setState(95); match(FISYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VergleichContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public List<TerminalNode> ID() { return getTokens(minipGrammarParser.ID); }
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(minipGrammarParser.ID, i);
		}
		public TerminalNode VERGLEICHSSYMBOL() { return getToken(minipGrammarParser.VERGLEICHSSYMBOL, 0); }
		public VergleichContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vergleich; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterVergleich(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitVergleich(this);
		}
	}

	public final VergleichContext vergleich() throws RecognitionException {
		VergleichContext _localctx = new VergleichContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vergleich);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			switch (_input.LA(1)) {
			case PLUSMINUSSYMBOL:
			case UNSIGNEDINTEGERCONST:
				{
				setState(97); number();
				}
				break;
			case ID:
				{
				setState(98); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(101); match(VERGLEICHSSYMBOL);
			setState(104);
			switch (_input.LA(1)) {
			case PLUSMINUSSYMBOL:
			case UNSIGNEDINTEGERCONST:
				{
				setState(102); number();
				}
				break;
			case ID:
				{
				setState(103); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchleifeContext extends ParserRuleContext {
		public TerminalNode DOSYMBOL() { return getToken(minipGrammarParser.DOSYMBOL, 0); }
		public TerminalNode WHILESYMBOL() { return getToken(minipGrammarParser.WHILESYMBOL, 0); }
		public VergleichContext vergleich() {
			return getRuleContext(VergleichContext.class,0);
		}
		public TerminalNode ODSYMBOL() { return getToken(minipGrammarParser.ODSYMBOL, 0); }
		public ProgrammcodeContext programmcode() {
			return getRuleContext(ProgrammcodeContext.class,0);
		}
		public SchleifeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schleife; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterSchleife(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitSchleife(this);
		}
	}

	public final SchleifeContext schleife() throws RecognitionException {
		SchleifeContext _localctx = new SchleifeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_schleife);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(WHILESYMBOL);
			setState(107); vergleich();
			setState(108); match(DOSYMBOL);
			setState(109); programmcode();
			setState(110); match(ODSYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_number);
		try {
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112); real();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113); integer();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerContext extends ParserRuleContext {
		public TerminalNode UNSIGNEDINTEGERCONST() { return getToken(minipGrammarParser.UNSIGNEDINTEGERCONST, 0); }
		public TerminalNode PLUSMINUSSYMBOL() { return getToken(minipGrammarParser.PLUSMINUSSYMBOL, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitInteger(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_integer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_la = _input.LA(1);
			if (_la==PLUSMINUSSYMBOL) {
				{
				setState(116); match(PLUSMINUSSYMBOL);
				}
			}

			setState(119); match(UNSIGNEDINTEGERCONST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RealContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public TerminalNode UNSIGNEDINTEGERCONST() { return getToken(minipGrammarParser.UNSIGNEDINTEGERCONST, 0); }
		public TerminalNode REALCUTSYMBOL() { return getToken(minipGrammarParser.REALCUTSYMBOL, 0); }
		public RealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitReal(this);
		}
	}

	public final RealContext real() throws RecognitionException {
		RealContext _localctx = new RealContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_real);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); integer();
			setState(122); match(REALCUTSYMBOL);
			setState(124);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(123); match(UNSIGNEDINTEGERCONST);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public TerminalNode KLAMMERAUFSYMBOL() { return getToken(minipGrammarParser.KLAMMERAUFSYMBOL, 0); }
		public TerminalNode PRINTLNSYMBOL() { return getToken(minipGrammarParser.PRINTLNSYMBOL, 0); }
		public TerminalNode KLAMMERZUSYMBOL() { return getToken(minipGrammarParser.KLAMMERZUSYMBOL, 0); }
		public TerminalNode CMDENDSYMBOL() { return getToken(minipGrammarParser.CMDENDSYMBOL, 0); }
		public List<ZuweisungvalueContext> zuweisungvalue() {
			return getRuleContexts(ZuweisungvalueContext.class);
		}
		public ZuweisungvalueContext zuweisungvalue(int i) {
			return getRuleContext(ZuweisungvalueContext.class,i);
		}
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitPrintln(this);
		}
	}

	public final PrintlnContext println() throws RecognitionException {
		PrintlnContext _localctx = new PrintlnContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_println);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(PRINTLNSYMBOL);
			setState(127); match(KLAMMERAUFSYMBOL);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KLAMMERAUFSYMBOL) | (1L << PLUSMINUSSYMBOL) | (1L << UNSIGNEDINTEGERCONST) | (1L << BOOLEANCONST) | (1L << STRINGCONST) | (1L << ID))) != 0)) {
				{
				{
				setState(128); zuweisungvalue();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134); match(KLAMMERZUSYMBOL);
			setState(135); match(CMDENDSYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minipGrammarParser.ID, 0); }
		public TerminalNode KLAMMERAUFSYMBOL() { return getToken(minipGrammarParser.KLAMMERAUFSYMBOL, 0); }
		public TerminalNode READSYMBOL() { return getToken(minipGrammarParser.READSYMBOL, 0); }
		public TerminalNode KLAMMERZUSYMBOL() { return getToken(minipGrammarParser.KLAMMERZUSYMBOL, 0); }
		public TerminalNode CMDENDSYMBOL() { return getToken(minipGrammarParser.CMDENDSYMBOL, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).enterRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipGrammarListener ) ((minipGrammarListener)listener).exitRead(this);
		}
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(READSYMBOL);
			setState(138); match(KLAMMERAUFSYMBOL);
			setState(139); match(ID);
			setState(140); match(KLAMMERZUSYMBOL);
			setState(141); match(CMDENDSYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
